Remove references to WebLayerClient

Chromium side to https://bugs.webkit.org/show_bug.cgi?id=74376

BUG=none


Review URL: http://codereview.chromium.org/8933002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@116211 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f7a162f70ee926876a7746241d448b506bbdda41